// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`测试渲染 icon 1`] = `
"<button class=\\"inline-flex justify-center items-center border rounded-md disabled:opacity-50 disabled:cursor-not-allowed min-w-16 min-h-10 px-2 text-base tracking-wider text-dark bg-white border-gray-300 active:bg-gray-200\\"><i class=\\"iconfont inline-block icon-rocket\\"></i>
  <!---->
</button>"
`;

exports[`测试渲染 icon 2`] = `
"<button class=\\"inline-flex justify-center items-center border rounded-md disabled:opacity-50 disabled:cursor-not-allowed min-w-16 min-h-10 px-2 text-base tracking-wider text-dark bg-white border-gray-300 active:bg-gray-200\\"><i class=\\"iconfont inline-block animate-spin icon-sync\\"></i>
  <!---->
</button>"
`;
